--- a/index.html
+++ b/index.html
@@ -3,45 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Hello!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300&display=swap" rel="stylesheet">
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        
         body {
-            font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-            background: #f5f3f0;
-            color: #333;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+            background: #fafafa;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            margin: 0;
         }
-        .container {
-            text-align: center;
-            max-width: 600px;
-            padding: 2rem;
-        }
+        
         h1 {
-            font-size: 3rem;
-            font-weight: 300;
-            margin-bottom: 1rem;
-            color: #e63946;
-        }
-        p {
-            font-size: 1.2rem;
-            line-height: 1.6;
-            color: #666;
-        }
-        .contact {
-            margin-top: 2rem;
-            font-size: 1rem;
-        }
-        a {
-            color: #e63946;
-            text-decoration: none;
+            font-size: clamp(4rem, 15vw, 12rem);
+            font-weight: 200;
+            color: #333;
+            letter-spacing: -0.02em;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-
+    <h1>Hello!</h1>
 </body>
 </html>
