--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             
             <div class="contact">
-                <a href="mailto:kris@krisfight.de">Let's talk →</a>
+                <a href="mailto:hello@kristinafeidt.de">Let's talk →</a>
             </div>
         </div>
     </section>
